# The-Outex-TC12-Classification

./: CMakeLists.txt  README.md  main.cpp
